--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@shopify/react-web-worker": "^2.0.0",
     "next": "^10.0.0",
     "prismjs": "^1.23.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-simple-code-editor": "^0.11.0"
+    "react-simple-code-editor": "^0.11.0",
+    "react-webworker": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
