--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-simple-code-editor": "^0.11.0",
-    "react-webworker": "^2.1.0"
+    "react-webworker": "^2.1.0",
+    "font-awesome": "4.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "postcss": "^8.3.0",
-    "tailwindcss": "^2.1.2"
+    "tailwindcss": "^2.1.2",
+    "eslint": "^7.25.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "@babel/core": "^7.13.16",
+    "@babel/eslint-parser": "^7.13.14"
   }
 }
